infrastructure/k8s/intro/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaos-generator
  labels:
    app: chaos-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chaos-generator
  template:
    metadata:
      labels:
        app: chaos-generator
    spec:
      containers:
        - name: chaos-generator-container
          image: ryanjks/chaos-generator:v1
          ports:
            - containerPort: 8501
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 3000
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
